<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dlayout"
    tools:context="com.example.lucky.inventoryx.Details">

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav"
        android:layout_gravity="start"
        app:itemBackground="@drawable/pressed_grey"
        android:id="@+id/navv"
        app:headerLayout="@layout/nav_header">

    </android.support.design.widget.NavigationView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        tools:context="com.example.lucky.inventoryx.Details">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:padding="@dimen/detTxt14_pad"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/user_email"
            android:layout_marginTop="@dimen/detTxt14_margT"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="@dimen/detailsImage_w"
            android:layout_height="@dimen/detailsImage_h"
            android:id="@+id/imageView4"
            android:background="@drawable/new_search"
            android:layout_alignTop="@+id/imageView2"
            android:layout_centerHorizontal="true" />



        <TextView
            android:text="@string/details_btn"
            android:layout_width="wrap_content"
            android:textColor="@color/lightgrey"
            android:textSize="@dimen/veifydet_text"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView7" />

        <TextView
            android:text="@string/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/veifydet_text"
            android:textColor="@color/lightgrey"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignRight="@+id/imageView2"
            android:layout_alignEnd="@+id/imageView2"
            android:layout_marginRight="@dimen/detTxt9_marR"
            android:layout_marginEnd="@dimen/detTxt9_mE"
            android:id="@+id/textView9" />

        <TextView
            android:text="@string/scan_btn"
            android:layout_width="wrap_content"
            android:layout_marginLeft="21dp"
            android:textSize="@dimen/scndet_text"
            android:textColor="@color/lightgrey"
            android:layout_marginStart="21dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView13"
            android:layout_below="@+id/imageView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText12"
            android:hint="@string/barcode_number"
            android:textColor="@color/lightgrey"
            android:layout_marginBottom="76dp"
            android:layout_above="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText12"
            android:layout_alignLeft="@+id/imageView5"
            android:layout_alignStart="@+id/imageView5"
            android:layout_marginBottom="43dp"
            android:id="@+id/textView3" />

        <ImageView
            android:layout_width="@dimen/detLogo_w"
            android:layout_height="@dimen/detLogo_h"
            app:srcCompat="@drawable/feature_logo"
            android:id="@+id/imageView6"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:focusableInTouchMode="true"
            android:layout_alignTop="@+id/textView14"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp" />

        <ImageView
            android:layout_width="@dimen/detailsImage_w"
            android:layout_height="@dimen/detailsImage_h"
            android:id="@+id/imageView5"
            android:background="@drawable/new_bar"
            android:layout_above="@+id/textView13"
            />

        <ImageView
            android:layout_width="@dimen/detailsImage_w"
            android:layout_height="@dimen/detailsImage_h"
            android:id="@+id/imageView2"
            android:background="@drawable/new_out"
            android:layout_marginBottom="49dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/imageView6"
            android:layout_toEndOf="@+id/imageView6"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>


